# dmail

./: Makefile.in  README  README.txt  aliases-sample.in  configure  configure.in  getdistopt.awk  header-dmail-sample.in  mlconfig.sh.in  processheader.awk  re-fine-mail.in  saveMail.in  sendMail.in
doc/: README.v1
samples/: aliases  amuse.list  express.list  hamoru-mem  header  hml.list  internet.list  members  nifty.list  nonhml.list  test.list
